<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MisRecetasActivity">

    <!-- Título y botón de volver -->
    <LinearLayout
        android:id="@+id/llMisRecetas"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/colorPrimary"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tituloMisRecetas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/title_mis_recetas"
            android:layout_weight="3"
            android:paddingStart="20dp"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivVolverMisRecetas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/icon6"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- Contenedor scrollable para las tarjetas -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewMisRecetas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/llMisRecetas"
        app:layout_constraintBottom_toTopOf="@id/llMenuPrincipal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMisRecetas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            tools:listitem="@layout/item_receta"
            tools:ignore="NotSibling" />
    </androidx.core.widget.NestedScrollView>

    <!-- Menú Principal -->
    <LinearLayout
        android:id="@+id/llMenuPrincipal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="?android:attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Recetas -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivRecetas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon5" />

            <TextView
                android:id="@+id/tvRecetas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvRecetasText"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <!-- Mis Recetas -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/moradooscuro_claro"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivMisRecetas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon1" />

            <TextView
                android:id="@+id/tvMisRecetas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMisRecetasText"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <!-- Favoritos -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivFavoritos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon2" />

            <TextView
                android:id="@+id/tvFavoritos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFavoritosText"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <!-- Crear Receta -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivCrearReceta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon3" />

            <TextView
                android:id="@+id/tvCrearReceta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvCrearRecetaText"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <!-- Categorías -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivCategorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon4" />

            <TextView
                android:id="@+id/tvCategorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvCategoriasText"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
